--- a/package.json
+++ b/package.json
@@ -3,28 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack --watch"
+    "watch": "webpack serve --config webpack.dev",
+    "build": "webpack --config webpack.prod"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^12.0.4",
-    "@types/webpack": "^4.4.32",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "@types/node": "18.11.9",
+    "@types/express-serve-static-core": "4.17.20",
+    "@types/express": "4.17.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
-    "declaration-bundler-webpack-plugin": "^1.0.3",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.6.1",
     "style-loader": "^3.3.1",
-    "ts-loader": "^6.0.1",
-    "typescript": "^3.5.1",
+    "ts-loader": "^9.4.1",
+    "typescript": "^3.9.10",
     "webpack": "^5.0.0",
     "webpack-cli": "4.10.0",
-    "wepack-cli": "0.0.1-security"
+    "webpack-dev-server": "^4.11.1"
   }
 }
